--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
